5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1637_2445.log
== SUBMITION (2019-04-11 11:24:14) 
-- CODE:
b = input("Digite um numero: "))
a=float(input("Digite um numero: "))

if(b.upper()=="C"):
	eq=a*(9/5)+32
else:
	eq=(a-32)*(5/9)
	
print(round(eq, 2))
-- EXECUTION TIME:
0.140351
-- ERROR:
  File "/home/codebench/codes/1637/2445/main.py", line 1
    b = input())
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:24:40) 
-- CODE:
b = input("Digite um numero: "))
a=float(input("Digite um numero: "))

if (b.upper()=="C"):
	eq=a*(9/5)+32
else:
	eq=(a-32)*(5/9)
	
print(round(eq, 2))
-- EXECUTION TIME:
0.199966
-- ERROR:
  File "/home/codebench/codes/1637/2445/main.py", line 1
    b = input())
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:24:41) 
-- CODE:
b = input("Digite um numero: "))
a=float(input("Digite um numero: "))

if (b.upper()=="C"):
	eq=a*(9/5)+32
else:
	eq=(a-32)*(5/9)
	
print(round(eq, 2))
-- ERROR:
File "XXXX", line 1
    b = input())
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:24:47) 
-- CODE:
b = input("Digite um numero: ")
a=float(input("Digite um numero: "))

if (b.upper()=="C"):
	eq=a*(9/5)+32
else:
	eq=(a-32)*(5/9)
	
print(round(eq, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:24:52) 
-- CODE:
b = input("Digite um numero: ")
a=float(input("Digite um numero: "))

if (b.upper()=="C"):
	eq=a*(9/5)+32
else:
	eq=(a-32)*(5/9)
	
print(round(eq, 2))
-- EXECUTION TIME:
0.23665
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
